external/lib25519-20241004/build/arm64/multiscalar/ed25519/arm64-maa4-redmul/shared/result-compile-ge25519_multi_scalarmult_process
ge25519_multi_scalarmult_process.S:4979:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
